src/objects/ER_Acceptor_to_Loop__c.object
<CustomObject>
    <fields>
        <fullName>ER_Acceptor__c</fullName>
        <label>Acceptor</label>
        <referenceTo>ER_Acceptor__c</referenceTo>
        <relationshipLabel>Acceptors to Loops</relationshipLabel>
        <relationshipName>Acceptors_to_Loops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ER_Behaviour__c</fullName>
        <label>Behaviour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ER_Behaviour</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Business_Unit__c</fullName>
        <formula>TEXT(ER_Acceptor__r.Owner:User.ER_Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Loop__c</fullName>
        <label>Loop</label>
        <referenceTo>ER_Loop__c</referenceTo>
        <relationshipLabel>Acceptors to Loops</relationshipLabel>
        <relationshipName>Acceptors_to_Loops</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ER_MID_Authorization__c</fullName>
        <formula>ER_Acceptor__r.ER_MID_Authorization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MID Authorization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Store_Name__c</fullName>
        <formula>ER_Acceptor__r.ER_Store__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_SubMID_Authorization__c</fullName>
        <formula>ER_Acceptor__r.ER_SubMID_Authorization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubMID Authorization</label>
        <type>Text</type>
    </fields>
    <label>Acceptor to Loop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ATL-{0000}</displayFormat>
        <label>Acceptor to Loop Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acceptors to Loops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>